Fixed alignments

--- a/styles.css
+++ b/styles.css
@@ -798,7 +798,7 @@ p {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: clamp(16rem, 35vw, 28rem);
+    font-size: clamp(16rem, 35vw, 16rem);
     font-weight: 900;
     color: rgba(120, 121, 255, 0.5);
     white-space: nowrap;
@@ -1579,6 +1579,15 @@ p {
 
     .content-box {
         padding: 10px !important;
+        height: 430px !important;
+    }
+
+    .notification-stack {
+        gap: 5px !important;
+    }
+
+    .notification-item {
+        padding: 0px 24px !important;
     }
 
     .content-box h3 {
@@ -1587,6 +1596,7 @@ p {
 
     .content-box p {
         font-size: smaller !important;
+        line-height: 1.2;
     }
 
     .step-number {
@@ -1600,11 +1610,16 @@ p {
     }
 
     .bento-content h2 {
-        font-size: 25px !important;
+        font-size: 20px !important;
+        margin-bottom: 0px !important;
     }
 
     .bento-content p {
         margin-bottom: 0px !important;
+    }
+
+    .bento-content .btn-secondary {
+        padding: 5px 10px !important;
     }
 
     .create-campaign-image,
